# controllers/orderEvents/orderEventsHandler.js
@@ -3,17 +3,17 @@ const Logger = require('../../utilities/logger');
 const dbLayer = require('../../utilities/mongodbLayer');
 const constants = require('../../utilities/constants');
 
-class OrdersExpressHandler {
+class OrderEventsExpressHandler {
   constructor() {
     this.db = dbLayer;
-    this.getOrders = this.getOrders.bind(this);
+    this.processOrderEvents = this.processOrderEvents.bind(this);
   }
-  async getOrders(req, res) {
+  async processOrderEvents(req, res) {
     const correlationId = req.correlationId();
-    const logger = new Logger(correlationId, 'getOrders-OrdersExpressHandler', 'getOrders');
+    const logger = new Logger(correlationId, 'processOrderEvents-OrderEventsExpressHandler', 'processOrderEvents');
     logger.info('Entry');
     try {
-      let options = { correlationId, collection: constants['ORDERS_COLLECTION']};
+      let options = { correlationId, collection: constants['ORDER_EVENTS_COLLECTION']};
       let orders = await this.db.getDocs(options);
       logger.info('orders', orders);
       res.status(200).send(orders);
@@ -23,4 +23,4 @@ class OrdersExpressHandler {
     }
   }
 }
-module.exports = new OrdersExpressHandler();
+module.exports = new OrderEventsExpressHandler();
